--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=   
+spring.datasource.password=
+mybatis.type-aliases-package: com.tReAsures.demo.entity
+mybatis.mapper-locations: classpath:mapper/*.xml
+cookie.key = CAP_MANAGER_LOGIN
