--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
 				</includes>
 				<filtering>false</filtering>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+          		<includes>
+             	   <include>*/*.xml</include>
+         	    </includes>
+           	    <filtering>false</filtering>
+			</resource>
 		</resources>
 	</build>
 
