--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,17 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+		 <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -74,10 +79,23 @@
 
 	<build>
 		<plugins>
+		<plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <fork>true</fork>
+                <executable>C:\Program Files\Java\jdk1.8.0_201\bin\javac.exe</executable>
+            </configuration>
+        </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+   				<artifactId>maven-jar-plugin</artifactId>
+  				<version>3.1.0</version>
+    		</plugin>
 		</plugins>
 		<resources>
 			<resource>
